Stylized outline text

--- a/assets/css/main.pcss
+++ b/assets/css/main.pcss
@@ -136,3 +136,13 @@ picture.lazyLoad {
 .bg-transparent {
   background-color: transparent;
 }
+
+.outlined {
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
+  color: transparent;
+
+  strong {
+    @apply text-black font-bold;
+  }
+}
