Added rotating text

--- a/assets/css/main.pcss
+++ b/assets/css/main.pcss
@@ -4,6 +4,13 @@
 }
 
 @font-face {
+  font-family: "Acumin";
+  src: url('/fonts/Acumin.woff2') format("woff2");
+  font-display: swap;
+}
+
+
+@font-face {
   font-family: 'Makro';
   src: url('/fonts/MakroXM-Black.woff2') format('woff2');
   font-weight: 900;
