--- a/assets/css/main.pcss
+++ b/assets/css/main.pcss
@@ -153,3 +153,16 @@ picture.lazyLoad {
     @apply text-black font-bold;
   }
 }
+
+.home .swiper .swiper-pagination {
+  position: relative;
+  bottom: 0;
+
+  .swiper-pagination-bullet {
+    @apply bg-transparent border border-white opacity-100;
+  }
+
+  .swiper-pagination-bullet-active {
+    @apply bg-white;
+  }
+}
