Added discover more page

--- a/assets/css/main.pcss
+++ b/assets/css/main.pcss
@@ -152,6 +152,15 @@ picture.lazyLoad {
   strong {
     @apply text-black font-bold;
   }
+
+
+  &--white {
+    -webkit-text-stroke-color: white;
+
+    strong {
+      @apply text-white;
+    }
+  }
 }
 
 .home .swiper .swiper-pagination {
